# kronknet

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  md_README.html  tools.sh
.github/workflows/: doxygen.yml  main.yml
examples/chat/: Makefile  chat_client.c  chat_server.c
examples/hangman/: Makefile  hangman.c
include/kronknet/: errdef.h
include/kronknet/callback/: callback.h
include/kronknet/client/: client.h
include/kronknet/connection/: connection.h
include/kronknet/macros/: errdef.h  optimization.h  platform.h  types.h
include/kronknet/mkn/: new.h  object.h  server.h
include/kronknet/server/: server.h
include/kronknet/server/callback/: callback.h
include/kronknet/server/pool/: pool.h
include/kronknet/utils/hashmap/: hashmap.h
include/kronknet/utils/rbuff/: rbuff.h
src/client/: client.h  client_clear.c  client_connect.c  client_create.c  client_destroy.c  client_init.c  client_isRunning.c  client_receive.c  client_run.c  client_send.c
src/client/callback/: callback_onConnect.c  callback_onDisconnect.c  callback_onRead.c  callback_onWrite.c
src/client/clear/: client_clear.c  client_destroy.c
src/client/getter/: client_getLogging.c  client_getUserPtr.c  client_isRunning.c
src/client/init/: client_create.c  client_init.c
src/client/logs/: client_err.c  client_out.c  client_setLogging.c
src/client/setter/: client_close.c  client_setData.c  client_setLogging.c  client_setUserPtr.c
src/clog/: clog.c  clog.h
src/connection/: conn_accept.c  conn_destroy.c  conn_getData.c  conn_send.c  conn_setEvents.c  connection.h
src/connection/clear/: conn_destroy.c
src/connection/getters/: conn_addr.c  conn_getData.c  conn_getId.c  conn_getUserPtr.c
src/connection/hooks/tcp/: conn_tcpSend.c
src/connection/hooks/udp/: conn_udpSend.c
src/connection/init/: conn_accept.c  conn_create.c
src/connection/setters/: conn_disconnect.c  conn_setData.c  conn_setEvents.c  conn_setUserPtr.c
src/mkn/: new.c  server.c
src/server/: server.h  server_accept.c  server_create.c  server_getData.c  server_init.c  server_kick.c  server_receiveData.c  server_run.c  server_setData.c
src/server/callback/: callback_onConnect.c  callback_onDisconnect.c  callback_onRead.c  callback_onWrite.c
src/server/clear/: server_clear.c  server_destroy.c
src/server/getter/: server_getIp.c  server_getLogging.c  server_getPort.c  server_getUserPtr.c  server_isRunning.c
src/server/getters/: server_getIp.c  server_getPort.c
src/server/hooks/tcp/: server_tcpCleanup.c  server_tcpPollin.c  server_tcpPollout.c
src/server/hooks/udp/: server_udpPollin.c  server_udpPollout.c
src/server/init/: server_create.c  server_init.c
src/server/logs/: server_err.c  server_out.c
src/server/pool/: pool.h  pool_clear.c  pool_init.c  pool_register.c  pool_unregister.c
src/server/setter/: server_setLogging.c  server_setUserPtr.c  server_stop.c
src/utils/hashmap/: create.c  delete.c  destroy.c  hash.c  hashmap.h  insert.c  rehash.c  search.c
src/utils/logger/: logger.c  logger.h
src/utils/rbuff/: rbuff.h  rbuff_clean.c  rbuff_create.c  rbuff_destroy.c  rbuff_find.c  rbuff_init.c  rbuff_isEmpty.c  rbuff_peek.c  rbuff_pop.c  rbuff_push.c  rbuff_remaining.c  rbuff_usage.c
test/: test.c
test/client/: Makefile  client.c
test/server/: Makefile  test.c
tests/: CMakeLists.txt
tests/utils/: tests_knmap.c  tests_knrbuff.c
